Make sure that the scrollbar is always visibile

--- a/src/less/_generic.shared.less
+++ b/src/less/_generic.shared.less
@@ -8,6 +8,10 @@ html, body {
   color: @black;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 ::selection {
   background-color: @primary;
 }
